# http-server

./: .clang-format  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/: dependabot.yml
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  benchmark_main.cpp
cmake/: HttpServerCompileOptions.cmake
docs/: Doxyfile  README.md  mainpage.md
fuzz/: CMakeLists.txt  fuzz_target.cpp
scripts/: ci-local.sh  pre-commit-clang-tidy.sh
src/: CMakeLists.txt  main.cpp  server.cpp  server.h
tests/: CMakeLists.txt  test_main.cpp
